--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <li><a href="#"><img src="img/Twitter.png" alt="Twitter" /></a></li>
                 <li><a href="#"><img src="img/Dribble.png" alt="Dribble" /></a></li>
                 <li><a href="#"><img src="img/Google.png" alt="Google +" /></a></li>
-                <li><a href="#"><img src="img/YouTube.png" alt="You Tube" /></a></li>
+                <li><a href="#"><img src="img/Youtube.png" alt="You Tube" /></a></li>          
             </ul>
         </div>
     </footer>
